# linalg-viz

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: main.c  scene_eigen.c  scene_transform.c  scene_vectors.c  scenes.h
